parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> opt_module decl_list
Rule 2     opt_module -> module_decl
Rule 3     opt_module -> empty
Rule 4     decl_list -> decl_list decl
Rule 5     decl_list -> decl
Rule 6     decl -> class_def
Rule 7     decl -> struct_def
Rule 8     decl -> enum_def
Rule 9     decl -> join_def
Rule 10    decl -> implement_decl
Rule 11    decl -> function
Rule 12    decl -> import_decl
Rule 13    decl -> python_import
Rule 14    decl -> pyfn_decl
Rule 15    decl -> pytype_decl
Rule 16    module_decl -> MODULE IDENT SEMI
Rule 17    struct_def -> STRUCT IDENT LBRACE field_decl_list RBRACE
Rule 18    enum_def -> ENUM IDENT LBRACE enum_variant_list RBRACE
Rule 19    join_def -> JOIN IDENT AND IDENT AS IDENT LBRACE field_decl_list RBRACE
Rule 20    field_decl_list -> field_decl_list field_decl
Rule 21    field_decl_list -> field_decl
Rule 22    field_decl_list -> empty
Rule 23    field_decl -> IDENT COLON type_expr opt_comma
Rule 24    enum_variant_list -> enum_variant_list COMMA IDENT
Rule 25    enum_variant_list -> IDENT
Rule 26    enum_variant_list -> empty
Rule 27    primary -> IDENT LBRACE field_assign_list RBRACE
Rule 28    field_assign_list -> field_assign_list field_assign
Rule 29    field_assign_list -> field_assign
Rule 30    field_assign_list -> empty
Rule 31    field_assign -> IDENT COLON expression opt_comma
Rule 32    opt_comma -> COMMA
Rule 33    opt_comma -> empty
Rule 34    class_def -> CLASS IDENT LBRACE class_body RBRACE
Rule 35    class_body -> class_body class_member
Rule 36    class_body -> class_member
Rule 37    class_member -> PUBLIC IDENT COLON type_expr SEMI
Rule 38    class_member -> LET IDENT COLON type_expr SEMI
Rule 39    class_member -> function
Rule 40    function -> FN IDENT LPAREN parameters_opt RPAREN return_opt block
Rule 41    parameters_opt -> parameters
Rule 42    parameters_opt -> empty
Rule 43    parameters -> parameters COMMA parameter
Rule 44    parameters -> parameter
Rule 45    parameter -> IDENT COLON type_expr
Rule 46    return_opt -> ARROW type_expr
Rule 47    return_opt -> empty
Rule 48    type_expr -> simple_type_expr array_spec_opt
Rule 49    simple_type_expr -> IDENT type_access_opt
Rule 50    array_spec_opt -> LBRACKET NUMBER RBRACKET
Rule 51    array_spec_opt -> empty
Rule 52    type_access_opt -> type_access_opt_part
Rule 53    type_access_opt -> empty
Rule 54    type_access_opt_part -> DOT IDENT
Rule 55    type_access_opt_part -> DDCOLON IDENT
Rule 56    block -> LBRACE statement_list RBRACE
Rule 57    statement_list -> statement_list statement
Rule 58    statement_list -> empty
Rule 59    statement -> var_decl
Rule 60    statement -> assignment_statement
Rule 61    statement -> return_statement
Rule 62    statement -> expr_statement
Rule 63    statement -> if_statement
Rule 64    statement -> while_stmt
Rule 65    statement -> for_stmt
Rule 66    var_decl -> LET IDENT COLON type_expr EQUAL expression SEMI
Rule 67    var_decl -> LET IDENT COLON type_expr SEMI
Rule 68    return_statement -> RETURN expression SEMI
Rule 69    expr_statement -> expression SEMI
Rule 70    expression -> call_expr
Rule 71    expression -> expression PLUS expression
Rule 72    expression -> expression MINUS expression
Rule 73    expression -> expression TIMES expression
Rule 74    expression -> expression DIVIDE expression
Rule 75    expression -> expression MOD expression
Rule 76    expression -> expression LE expression
Rule 77    expression -> expression LT expression
Rule 78    expression -> expression GE expression
Rule 79    expression -> expression GT expression
Rule 80    expression -> expression EQ expression
Rule 81    expression -> expression NE expression
Rule 82    call_expr -> call_expr call_suffix
Rule 83    call_expr -> primary
Rule 84    call_suffix -> LPAREN arg_list_opt RPAREN
Rule 85    call_suffix -> DOT IDENT
Rule 86    call_suffix -> DDCOLON IDENT
Rule 87    call_suffix -> ARROW IDENT
Rule 88    call_suffix -> LBRACKET expression RBRACKET
Rule 89    arg_list_opt -> arg_list
Rule 90    arg_list_opt -> empty
Rule 91    arg_list -> arg_list COMMA argument
Rule 92    arg_list -> argument
Rule 93    argument -> IDENT COLON expression
Rule 94    argument -> expression
Rule 95    primary -> LPAREN expression RPAREN
Rule 96    primary -> LBRACKET expr_list_opt RBRACKET
Rule 97    expr_list_opt -> expr_list
Rule 98    expr_list_opt -> empty
Rule 99    expr_list -> expr_list COMMA expression
Rule 100   expr_list -> expression
Rule 101   primary -> NUMBER
Rule 102   primary -> STRING
Rule 103   primary -> IDENT
Rule 104   primary -> TRUE
Rule 105   primary -> FALSE
Rule 106   primary -> NEW qualified_identifier LPAREN arg_list_opt RPAREN
Rule 107   primary -> NEW qualified_identifier
Rule 108   primary -> FN LPAREN parameters_opt RPAREN return_opt block
Rule 109   empty -> <empty>
Rule 110   if_statement -> IF expression block else_clause_opt
Rule 111   else_clause_opt -> ELSE if_statement
Rule 112   else_clause_opt -> ELSE block
Rule 113   else_clause_opt -> empty
Rule 114   implement_decl -> IMPLEMENT IDENT USES IDENT LBRACE method_list RBRACE
Rule 115   method_list -> method_list function
Rule 116   method_list -> function
Rule 117   assignment_statement -> assignment SEMI
Rule 118   assignment -> call_expr EQUAL expression
Rule 119   import_decl -> IMPORT STRING SEMI
Rule 120   qualified_identifier -> IDENT DDCOLON IDENT
Rule 121   qualified_identifier -> IDENT
Rule 122   expression -> MINUS expression
Rule 123   while_stmt -> WHILE expression block
Rule 124   for_stmt -> FOR IDENT COLON type_expr IN expression block
Rule 125   python_import -> PYTHON IMPORT IDENT SEMI
Rule 126   pyfn_decl -> PYFN IDENT LPAREN parameters_opt RPAREN ARROW type_expr code_block
Rule 127   code_block -> LBRACE CODE_STRING RBRACE
Rule 128   pytype_decl -> PYTYPE IDENT EQUAL CODE_STRING SEMI

Terminals, with rules where they appear

AND                  : 19
ARROW                : 46 87 126
AS                   : 19
CLASS                : 34
CODE_STRING          : 127 128
COLON                : 23 31 37 38 45 66 67 93 124
COMMA                : 24 32 43 91 99
DDCOLON              : 55 86 120
DIVIDE               : 74
DOT                  : 54 85
ELSE                 : 111 112
ENUM                 : 18
EQ                   : 80
EQUAL                : 66 118 128
FALSE                : 105
FN                   : 40 108
FOR                  : 124
GE                   : 78
GT                   : 79
IDENT                : 16 17 18 19 19 19 23 24 25 27 31 34 37 38 40 45 49 54 55 66 67 85 86 87 93 103 114 114 120 120 121 124 125 126 128
IF                   : 110
IMPLEMENT            : 114
IMPORT               : 119 125
IN                   : 124
JOIN                 : 19
LBRACE               : 17 18 19 27 34 56 114 127
LBRACKET             : 50 88 96
LE                   : 76
LET                  : 38 66 67
LPAREN               : 40 84 95 106 108 126
LT                   : 77
MINUS                : 72 122
MOD                  : 75
MODULE               : 16
NE                   : 81
NEW                  : 106 107
NUMBER               : 50 101
PLUS                 : 71
PUBLIC               : 37
PYFN                 : 126
PYTHON               : 125
PYTYPE               : 128
RBRACE               : 17 18 19 27 34 56 114 127
RBRACKET             : 50 88 96
RETURN               : 68
RPAREN               : 40 84 95 106 108 126
SEMI                 : 16 37 38 66 67 68 69 117 119 125 128
STRING               : 102 119
STRUCT               : 17
TIMES                : 73
TRUE                 : 104
USES                 : 114
WHILE                : 123
error                : 

Nonterminals, with rules where they appear

arg_list             : 89 91
arg_list_opt         : 84 106
argument             : 91 92
array_spec_opt       : 48
assignment           : 117
assignment_statement : 60
block                : 40 108 110 112 123 124
call_expr            : 70 82 118
call_suffix          : 82
class_body           : 34 35
class_def            : 6
class_member         : 35 36
code_block           : 126
decl                 : 4 5
decl_list            : 1 4
else_clause_opt      : 110
empty                : 3 22 26 30 33 42 47 51 53 58 90 98 113
enum_def             : 8
enum_variant_list    : 18 24
expr_list            : 97 99
expr_list_opt        : 96
expr_statement       : 62
expression           : 31 66 68 69 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 88 93 94 95 99 100 110 118 122 123 124
field_assign         : 28 29
field_assign_list    : 27 28
field_decl           : 20 21
field_decl_list      : 17 19 20
for_stmt             : 65
function             : 11 39 115 116
if_statement         : 63 111
implement_decl       : 10
import_decl          : 12
join_def             : 9
method_list          : 114 115
module_decl          : 2
opt_comma            : 23 31
opt_module           : 1
parameter            : 43 44
parameters           : 41 43
parameters_opt       : 40 108 126
primary              : 83
program              : 0
pyfn_decl            : 14
python_import        : 13
pytype_decl          : 15
qualified_identifier : 106 107
return_opt           : 40 108
return_statement     : 61
simple_type_expr     : 48
statement            : 57
statement_list       : 56 57
struct_def           : 7
type_access_opt      : 49
type_access_opt_part : 52
type_expr            : 23 37 38 45 46 66 67 124 126
var_decl             : 59
while_stmt           : 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . opt_module decl_list
    (2) opt_module -> . module_decl
    (3) opt_module -> . empty
    (16) module_decl -> . MODULE IDENT SEMI
    (109) empty -> .

    MODULE          shift and go to state 5
    CLASS           reduce using rule 109 (empty -> .)
    STRUCT          reduce using rule 109 (empty -> .)
    ENUM            reduce using rule 109 (empty -> .)
    JOIN            reduce using rule 109 (empty -> .)
    IMPLEMENT       reduce using rule 109 (empty -> .)
    FN              reduce using rule 109 (empty -> .)
    IMPORT          reduce using rule 109 (empty -> .)
    PYTHON          reduce using rule 109 (empty -> .)
    PYFN            reduce using rule 109 (empty -> .)
    PYTYPE          reduce using rule 109 (empty -> .)

    program                        shift and go to state 1
    opt_module                     shift and go to state 2
    module_decl                    shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> opt_module . decl_list
    (4) decl_list -> . decl_list decl
    (5) decl_list -> . decl
    (6) decl -> . class_def
    (7) decl -> . struct_def
    (8) decl -> . enum_def
    (9) decl -> . join_def
    (10) decl -> . implement_decl
    (11) decl -> . function
    (12) decl -> . import_decl
    (13) decl -> . python_import
    (14) decl -> . pyfn_decl
    (15) decl -> . pytype_decl
    (34) class_def -> . CLASS IDENT LBRACE class_body RBRACE
    (17) struct_def -> . STRUCT IDENT LBRACE field_decl_list RBRACE
    (18) enum_def -> . ENUM IDENT LBRACE enum_variant_list RBRACE
    (19) join_def -> . JOIN IDENT AND IDENT AS IDENT LBRACE field_decl_list RBRACE
    (114) implement_decl -> . IMPLEMENT IDENT USES IDENT LBRACE method_list RBRACE
    (40) function -> . FN IDENT LPAREN parameters_opt RPAREN return_opt block
    (119) import_decl -> . IMPORT STRING SEMI
    (125) python_import -> . PYTHON IMPORT IDENT SEMI
    (126) pyfn_decl -> . PYFN IDENT LPAREN parameters_opt RPAREN ARROW type_expr code_block
    (128) pytype_decl -> . PYTYPE IDENT EQUAL CODE_STRING SEMI

    CLASS           shift and go to state 18
    STRUCT          shift and go to state 19
    ENUM            shift and go to state 20
    JOIN            shift and go to state 21
    IMPLEMENT       shift and go to state 22
    FN              shift and go to state 23
    IMPORT          shift and go to state 24
    PYTHON          shift and go to state 25
    PYFN            shift and go to state 26
    PYTYPE          shift and go to state 27

    decl_list                      shift and go to state 6
    decl                           shift and go to state 7
    class_def                      shift and go to state 8
    struct_def                     shift and go to state 9
    enum_def                       shift and go to state 10
    join_def                       shift and go to state 11
    implement_decl                 shift and go to state 12
    function                       shift and go to state 13
    import_decl                    shift and go to state 14
    python_import                  shift and go to state 15
    pyfn_decl                      shift and go to state 16
    pytype_decl                    shift and go to state 17

state 3

    (2) opt_module -> module_decl .

    CLASS           reduce using rule 2 (opt_module -> module_decl .)
    STRUCT          reduce using rule 2 (opt_module -> module_decl .)
    ENUM            reduce using rule 2 (opt_module -> module_decl .)
    JOIN            reduce using rule 2 (opt_module -> module_decl .)
    IMPLEMENT       reduce using rule 2 (opt_module -> module_decl .)
    FN              reduce using rule 2 (opt_module -> module_decl .)
    IMPORT          reduce using rule 2 (opt_module -> module_decl .)
    PYTHON          reduce using rule 2 (opt_module -> module_decl .)
    PYFN            reduce using rule 2 (opt_module -> module_decl .)
    PYTYPE          reduce using rule 2 (opt_module -> module_decl .)


state 4

    (3) opt_module -> empty .

    CLASS           reduce using rule 3 (opt_module -> empty .)
    STRUCT          reduce using rule 3 (opt_module -> empty .)
    ENUM            reduce using rule 3 (opt_module -> empty .)
    JOIN            reduce using rule 3 (opt_module -> empty .)
    IMPLEMENT       reduce using rule 3 (opt_module -> empty .)
    FN              reduce using rule 3 (opt_module -> empty .)
    IMPORT          reduce using rule 3 (opt_module -> empty .)
    PYTHON          reduce using rule 3 (opt_module -> empty .)
    PYFN            reduce using rule 3 (opt_module -> empty .)
    PYTYPE          reduce using rule 3 (opt_module -> empty .)


state 5

    (16) module_decl -> MODULE . IDENT SEMI

    IDENT           shift and go to state 28


state 6

    (1) program -> opt_module decl_list .
    (4) decl_list -> decl_list . decl
    (6) decl -> . class_def
    (7) decl -> . struct_def
    (8) decl -> . enum_def
    (9) decl -> . join_def
    (10) decl -> . implement_decl
    (11) decl -> . function
    (12) decl -> . import_decl
    (13) decl -> . python_import
    (14) decl -> . pyfn_decl
    (15) decl -> . pytype_decl
    (34) class_def -> . CLASS IDENT LBRACE class_body RBRACE
    (17) struct_def -> . STRUCT IDENT LBRACE field_decl_list RBRACE
    (18) enum_def -> . ENUM IDENT LBRACE enum_variant_list RBRACE
    (19) join_def -> . JOIN IDENT AND IDENT AS IDENT LBRACE field_decl_list RBRACE
    (114) implement_decl -> . IMPLEMENT IDENT USES IDENT LBRACE method_list RBRACE
    (40) function -> . FN IDENT LPAREN parameters_opt RPAREN return_opt block
    (119) import_decl -> . IMPORT STRING SEMI
    (125) python_import -> . PYTHON IMPORT IDENT SEMI
    (126) pyfn_decl -> . PYFN IDENT LPAREN parameters_opt RPAREN ARROW type_expr code_block
    (128) pytype_decl -> . PYTYPE IDENT EQUAL CODE_STRING SEMI

    $end            reduce using rule 1 (program -> opt_module decl_list .)
    CLASS           shift and go to state 18
    STRUCT          shift and go to state 19
    ENUM            shift and go to state 20
    JOIN            shift and go to state 21
    IMPLEMENT       shift and go to state 22
    FN              shift and go to state 23
    IMPORT          shift and go to state 24
    PYTHON          shift and go to state 25
    PYFN            shift and go to state 26
    PYTYPE          shift and go to state 27

    decl                           shift and go to state 29
    class_def                      shift and go to state 8
    struct_def                     shift and go to state 9
    enum_def                       shift and go to state 10
    join_def                       shift and go to state 11
    implement_decl                 shift and go to state 12
    function                       shift and go to state 13
    import_decl                    shift and go to state 14
    python_import                  shift and go to state 15
    pyfn_decl                      shift and go to state 16
    pytype_decl                    shift and go to state 17

state 7

    (5) decl_list -> decl .

    CLASS           reduce using rule 5 (decl_list -> decl .)
    STRUCT          reduce using rule 5 (decl_list -> decl .)
    ENUM            reduce using rule 5 (decl_list -> decl .)
    JOIN            reduce using rule 5 (decl_list -> decl .)
    IMPLEMENT       reduce using rule 5 (decl_list -> decl .)
    FN              reduce using rule 5 (decl_list -> decl .)
    IMPORT          reduce using rule 5 (decl_list -> decl .)
    PYTHON          reduce using rule 5 (decl_list -> decl .)
    PYFN            reduce using rule 5 (decl_list -> decl .)
    PYTYPE          reduce using rule 5 (decl_list -> decl .)
    $end            reduce using rule 5 (decl_list -> decl .)


state 8

    (6) decl -> class_def .

    CLASS           reduce using rule 6 (decl -> class_def .)
    STRUCT          reduce using rule 6 (decl -> class_def .)
    ENUM            reduce using rule 6 (decl -> class_def .)
    JOIN            reduce using rule 6 (decl -> class_def .)
    IMPLEMENT       reduce using rule 6 (decl -> class_def .)
    FN              reduce using rule 6 (decl -> class_def .)
    IMPORT          reduce using rule 6 (decl -> class_def .)
    PYTHON          reduce using rule 6 (decl -> class_def .)
    PYFN            reduce using rule 6 (decl -> class_def .)
    PYTYPE          reduce using rule 6 (decl -> class_def .)
    $end            reduce using rule 6 (decl -> class_def .)


state 9

    (7) decl -> struct_def .

    CLASS           reduce using rule 7 (decl -> struct_def .)
    STRUCT          reduce using rule 7 (decl -> struct_def .)
    ENUM            reduce using rule 7 (decl -> struct_def .)
    JOIN            reduce using rule 7 (decl -> struct_def .)
    IMPLEMENT       reduce using rule 7 (decl -> struct_def .)
    FN              reduce using rule 7 (decl -> struct_def .)
    IMPORT          reduce using rule 7 (decl -> struct_def .)
    PYTHON          reduce using rule 7 (decl -> struct_def .)
    PYFN            reduce using rule 7 (decl -> struct_def .)
    PYTYPE          reduce using rule 7 (decl -> struct_def .)
    $end            reduce using rule 7 (decl -> struct_def .)


state 10

    (8) decl -> enum_def .

    CLASS           reduce using rule 8 (decl -> enum_def .)
    STRUCT          reduce using rule 8 (decl -> enum_def .)
    ENUM            reduce using rule 8 (decl -> enum_def .)
    JOIN            reduce using rule 8 (decl -> enum_def .)
    IMPLEMENT       reduce using rule 8 (decl -> enum_def .)
    FN              reduce using rule 8 (decl -> enum_def .)
    IMPORT          reduce using rule 8 (decl -> enum_def .)
    PYTHON          reduce using rule 8 (decl -> enum_def .)
    PYFN            reduce using rule 8 (decl -> enum_def .)
    PYTYPE          reduce using rule 8 (decl -> enum_def .)
    $end            reduce using rule 8 (decl -> enum_def .)


state 11

    (9) decl -> join_def .

    CLASS           reduce using rule 9 (decl -> join_def .)
    STRUCT          reduce using rule 9 (decl -> join_def .)
    ENUM            reduce using rule 9 (decl -> join_def .)
    JOIN            reduce using rule 9 (decl -> join_def .)
    IMPLEMENT       reduce using rule 9 (decl -> join_def .)
    FN              reduce using rule 9 (decl -> join_def .)
    IMPORT          reduce using rule 9 (decl -> join_def .)
    PYTHON          reduce using rule 9 (decl -> join_def .)
    PYFN            reduce using rule 9 (decl -> join_def .)
    PYTYPE          reduce using rule 9 (decl -> join_def .)
    $end            reduce using rule 9 (decl -> join_def .)


state 12

    (10) decl -> implement_decl .

    CLASS           reduce using rule 10 (decl -> implement_decl .)
    STRUCT          reduce using rule 10 (decl -> implement_decl .)
    ENUM            reduce using rule 10 (decl -> implement_decl .)
    JOIN            reduce using rule 10 (decl -> implement_decl .)
    IMPLEMENT       reduce using rule 10 (decl -> implement_decl .)
    FN              reduce using rule 10 (decl -> implement_decl .)
    IMPORT          reduce using rule 10 (decl -> implement_decl .)
    PYTHON          reduce using rule 10 (decl -> implement_decl .)
    PYFN            reduce using rule 10 (decl -> implement_decl .)
    PYTYPE          reduce using rule 10 (decl -> implement_decl .)
    $end            reduce using rule 10 (decl -> implement_decl .)


state 13

    (11) decl -> function .

    CLASS           reduce using rule 11 (decl -> function .)
    STRUCT          reduce using rule 11 (decl -> function .)
    ENUM            reduce using rule 11 (decl -> function .)
    JOIN            reduce using rule 11 (decl -> function .)
    IMPLEMENT       reduce using rule 11 (decl -> function .)
    FN              reduce using rule 11 (decl -> function .)
    IMPORT          reduce using rule 11 (decl -> function .)
    PYTHON          reduce using rule 11 (decl -> function .)
    PYFN            reduce using rule 11 (decl -> function .)
    PYTYPE          reduce using rule 11 (decl -> function .)
    $end            reduce using rule 11 (decl -> function .)


state 14

    (12) decl -> import_decl .

    CLASS           reduce using rule 12 (decl -> import_decl .)
    STRUCT          reduce using rule 12 (decl -> import_decl .)
    ENUM            reduce using rule 12 (decl -> import_decl .)
    JOIN            reduce using rule 12 (decl -> import_decl .)
    IMPLEMENT       reduce using rule 12 (decl -> import_decl .)
    FN              reduce using rule 12 (decl -> import_decl .)
    IMPORT          reduce using rule 12 (decl -> import_decl .)
    PYTHON          reduce using rule 12 (decl -> import_decl .)
    PYFN            reduce using rule 12 (decl -> import_decl .)
    PYTYPE          reduce using rule 12 (decl -> import_decl .)
    $end            reduce using rule 12 (decl -> import_decl .)


state 15

    (13) decl -> python_import .

    CLASS           reduce using rule 13 (decl -> python_import .)
    STRUCT          reduce using rule 13 (decl -> python_import .)
    ENUM            reduce using rule 13 (decl -> python_import .)
    JOIN            reduce using rule 13 (decl -> python_import .)
    IMPLEMENT       reduce using rule 13 (decl -> python_import .)
    FN              reduce using rule 13 (decl -> python_import .)
    IMPORT          reduce using rule 13 (decl -> python_import .)
    PYTHON          reduce using rule 13 (decl -> python_import .)
    PYFN            reduce using rule 13 (decl -> python_import .)
    PYTYPE          reduce using rule 13 (decl -> python_import .)
    $end            reduce using rule 13 (decl -> python_import .)


state 16

    (14) decl -> pyfn_decl .

    CLASS           reduce using rule 14 (decl -> pyfn_decl .)
    STRUCT          reduce using rule 14 (decl -> pyfn_decl .)
    ENUM            reduce using rule 14 (decl -> pyfn_decl .)
    JOIN            reduce using rule 14 (decl -> pyfn_decl .)
    IMPLEMENT       reduce using rule 14 (decl -> pyfn_decl .)
    FN              reduce using rule 14 (decl -> pyfn_decl .)
    IMPORT          reduce using rule 14 (decl -> pyfn_decl .)
    PYTHON          reduce using rule 14 (decl -> pyfn_decl .)
    PYFN            reduce using rule 14 (decl -> pyfn_decl .)
    PYTYPE          reduce using rule 14 (decl -> pyfn_decl .)
    $end            reduce using rule 14 (decl -> pyfn_decl .)


state 17

    (15) decl -> pytype_decl .

    CLASS           reduce using rule 15 (decl -> pytype_decl .)
    STRUCT          reduce using rule 15 (decl -> pytype_decl .)
    ENUM            reduce using rule 15 (decl -> pytype_decl .)
    JOIN            reduce using rule 15 (decl -> pytype_decl .)
    IMPLEMENT       reduce using rule 15 (decl -> pytype_decl .)
    FN              reduce using rule 15 (decl -> pytype_decl .)
    IMPORT          reduce using rule 15 (decl -> pytype_decl .)
    PYTHON          reduce using rule 15 (decl -> pytype_decl .)
    PYFN            reduce using rule 15 (decl -> pytype_decl .)
    PYTYPE          reduce using rule 15 (decl -> pytype_decl .)
    $end            reduce using rule 15 (decl -> pytype_decl .)


state 18

    (34) class_def -> CLASS . IDENT LBRACE class_body RBRACE

    IDENT           shift and go to state 30


state 19

    (17) struct_def -> STRUCT . IDENT LBRACE field_decl_list RBRACE

    IDENT           shift and go to state 31


state 20

    (18) enum_def -> ENUM . IDENT LBRACE enum_variant_list RBRACE

    IDENT           shift and go to state 32


state 21

    (19) join_def -> JOIN . IDENT AND IDENT AS IDENT LBRACE field_decl_list RBRACE

    IDENT           shift and go to state 33


state 22

    (114) implement_decl -> IMPLEMENT . IDENT USES IDENT LBRACE method_list RBRACE

    IDENT           shift and go to state 34


state 23

    (40) function -> FN . IDENT LPAREN parameters_opt RPAREN return_opt block

    IDENT           shift and go to state 35


state 24

    (119) import_decl -> IMPORT . STRING SEMI

    STRING          shift and go to state 36


state 25

    (125) python_import -> PYTHON . IMPORT IDENT SEMI

    IMPORT          shift and go to state 37


state 26

    (126) pyfn_decl -> PYFN . IDENT LPAREN parameters_opt RPAREN ARROW type_expr code_block

    IDENT           shift and go to state 38


state 27

    (128) pytype_decl -> PYTYPE . IDENT EQUAL CODE_STRING SEMI

    IDENT           shift and go to state 39


state 28

    (16) module_decl -> MODULE IDENT . SEMI

    SEMI            shift and go to state 40


state 29

    (4) decl_list -> decl_list decl .

    CLASS           reduce using rule 4 (decl_list -> decl_list decl .)
    STRUCT          reduce using rule 4 (decl_list -> decl_list decl .)
    ENUM            reduce using rule 4 (decl_list -> decl_list decl .)
    JOIN            reduce using rule 4 (decl_list -> decl_list decl .)
    IMPLEMENT       reduce using rule 4 (decl_list -> decl_list decl .)
    FN              reduce using rule 4 (decl_list -> decl_list decl .)
    IMPORT          reduce using rule 4 (decl_list -> decl_list decl .)
    PYTHON          reduce using rule 4 (decl_list -> decl_list decl .)
    PYFN            reduce using rule 4 (decl_list -> decl_list decl .)
    PYTYPE          reduce using rule 4 (decl_list -> decl_list decl .)
    $end            reduce using rule 4 (decl_list -> decl_list decl .)


state 30

    (34) class_def -> CLASS IDENT . LBRACE class_body RBRACE

    LBRACE          shift and go to state 41


state 31

    (17) struct_def -> STRUCT IDENT . LBRACE field_decl_list RBRACE

    LBRACE          shift and go to state 42


state 32

    (18) enum_def -> ENUM IDENT . LBRACE enum_variant_list RBRACE

    LBRACE          shift and go to state 43


state 33

    (19) join_def -> JOIN IDENT . AND IDENT AS IDENT LBRACE field_decl_list RBRACE

    AND             shift and go to state 44


state 34

    (114) implement_decl -> IMPLEMENT IDENT . USES IDENT LBRACE method_list RBRACE

    USES            shift and go to state 45


state 35

    (40) function -> FN IDENT . LPAREN parameters_opt RPAREN return_opt block

    LPAREN          shift and go to state 46


state 36

    (119) import_decl -> IMPORT STRING . SEMI

    SEMI            shift and go to state 47


state 37

    (125) python_import -> PYTHON IMPORT . IDENT SEMI

    IDENT           shift and go to state 48


state 38

    (126) pyfn_decl -> PYFN IDENT . LPAREN parameters_opt RPAREN ARROW type_expr code_block

    LPAREN          shift and go to state 49


state 39

    (128) pytype_decl -> PYTYPE IDENT . EQUAL CODE_STRING SEMI

    EQUAL           shift and go to state 50


state 40

    (16) module_decl -> MODULE IDENT SEMI .

    CLASS           reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    STRUCT          reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    ENUM            reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    JOIN            reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    IMPLEMENT       reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    FN              reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    IMPORT          reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    PYTHON          reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    PYFN            reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)
    PYTYPE          reduce using rule 16 (module_decl -> MODULE IDENT SEMI .)


state 41

    (34) class_def -> CLASS IDENT LBRACE . class_body RBRACE
    (35) class_body -> . class_body class_member
    (36) class_body -> . class_member
    (37) class_member -> . PUBLIC IDENT COLON type_expr SEMI
    (38) class_member -> . LET IDENT COLON type_expr SEMI
    (39) class_member -> . function
    (40) function -> . FN IDENT LPAREN parameters_opt RPAREN return_opt block

    PUBLIC          shift and go to state 53
    LET             shift and go to state 54
    FN              shift and go to state 23

    class_body                     shift and go to state 51
    class_member                   shift and go to state 52
    function                       shift and go to state 55

state 42

    (17) struct_def -> STRUCT IDENT LBRACE . field_decl_list RBRACE
    (20) field_decl_list -> . field_decl_list field_decl
    (21) field_decl_list -> . field_decl
    (22) field_decl_list -> . empty
    (23) field_decl -> . IDENT COLON type_expr opt_comma
    (109) empty -> .

  ! shift/reduce conflict for IDENT resolved as shift
    IDENT           shift and go to state 56
    RBRACE          reduce using rule 109 (empty -> .)

  ! IDENT           [ reduce using rule 109 (empty -> .) ]

    field_decl_list                shift and go to state 57
    field_decl                     shift and go to state 58
    empty                          shift and go to state 59

state 43

    (18) enum_def -> ENUM IDENT LBRACE . enum_variant_list RBRACE
    (24) enum_variant_list -> . enum_variant_list COMMA IDENT
    (25) enum_variant_list -> . IDENT
    (26) enum_variant_list -> . empty
    (109) empty -> .

    IDENT           shift and go to state 60
    RBRACE          reduce using rule 109 (empty -> .)
    COMMA           reduce using rule 109 (empty -> .)

    enum_variant_list              shift and go to state 61
    empty                          shift and go to state 62

state 44

    (19) join_def -> JOIN IDENT AND . IDENT AS IDENT LBRACE field_decl_list RBRACE

    IDENT           shift and go to state 63


state 45

    (114) implement_decl -> IMPLEMENT IDENT USES . IDENT LBRACE method_list RBRACE

    IDENT           shift and go to state 64


state 46

    (40) function -> FN IDENT LPAREN . parameters_opt RPAREN return_opt block
    (41) parameters_opt -> . parameters
    (42) parameters_opt -> . empty
    (43) parameters -> . parameters COMMA parameter
    (44) parameters -> . parameter
    (109) empty -> .
    (45) parameter -> . IDENT COLON type_expr

    RPAREN          reduce using rule 109 (empty -> .)
    IDENT           shift and go to state 65

    parameters_opt                 shift and go to state 66
    parameters                     shift and go to state 67
    empty                          shift and go to state 68
    parameter                      shift and go to state 69

state 47

    (119) import_decl -> IMPORT STRING SEMI .

    CLASS           reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    STRUCT          reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    ENUM            reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    JOIN            reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    IMPLEMENT       reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    FN              reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    IMPORT          reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    PYTHON          reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    PYFN            reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    PYTYPE          reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)
    $end            reduce using rule 119 (import_decl -> IMPORT STRING SEMI .)


state 48

    (125) python_import -> PYTHON IMPORT IDENT . SEMI

    SEMI            shift and go to state 70


state 49

    (126) pyfn_decl -> PYFN IDENT LPAREN . parameters_opt RPAREN ARROW type_expr code_block
    (41) parameters_opt -> . parameters
    (42) parameters_opt -> . empty
    (43) parameters -> . parameters COMMA parameter
    (44) parameters -> . parameter
    (109) empty -> .
    (45) parameter -> . IDENT COLON type_expr

    RPAREN          reduce using rule 109 (empty -> .)
    IDENT           shift and go to state 65

    parameters_opt                 shift and go to state 71
    parameters                     shift and go to state 67
    empty                          shift and go to state 68
    parameter                      shift and go to state 69

state 50

    (128) pytype_decl -> PYTYPE IDENT EQUAL . CODE_STRING SEMI

    CODE_STRING     shift and go to state 72


state 51
